# Anki_Flashcard_Generator_with_Musixmatch_API

./: README.md
Anki Flashcard Deck Generation Tooling/: Artists_to_Check.csv  Input.csv  Results.csv  TranslatableSongs.csv
MusixMatch Anki Flashcard Generator Build Files/: README.txt
MusixMatch Anki Flashcard Generator Build Files/musix_match_API_caller_for_anki_deck/: Cargo.toml
MusixMatch Anki Flashcard Generator Build Files/musix_match_API_caller_for_anki_deck/src/: main.rs
MusixMatch Anki Flashcard Generator Build Files/search_musix_match_artists_for_translatable_lyrics/: Artists_to_Check.csv
MusixMatch Anki Flashcard Generator/musix_match_API_caller_for_anki_deck/: Input.csv  Results.csv
MusixMatch Anki Flashcard Generator/search_musix_match_artists_for_translatable_lyrics/: Cargo.toml
MusixMatch Anki Flashcard Generator/search_musix_match_artists_for_translatable_lyrics/src/: main.rs
examples/: Lyrics of the Arab World.txt  collection.anki2
