[package]
name = "search_musix_match_artists_for_translatable_lyrics"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "gzip", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
urlencoding = "2.1"
dotenvy = "0.15.7"